--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
   "name": "wedding-rsvp",
   "version": "1.0.0",
-  "description": "",
+  "description": "Server Wedding RSVP by danamulyana",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": ["RSVP","Wedding"],
+  "author": "danamulyana",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
-    "mongoose": "^8.6.2"
+    "express-rate-limit": "^7.4.0",
+    "mongoose": "^8.6.2",
+    "node-cache": "^5.1.2"
   }
 }
