--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,13 @@
 {
     "version": 2,
     "builds": [
-      { "src": "index.js", "use": "@vercel/node" }
+      { 
+        "src": "index.js", 
+        "use": "@vercel/node",
+        "config": {
+            "maxDuration": 60
+          }
+      }
     ],
     "routes": [
       { "src": "/(.*)", "dest": "index.js" }
